changed font size

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -297,6 +297,10 @@ color:#f3ce5e;
   #bottom a:visited{ 
  color:#37daf7;
  }
+ .contact {
+ font-size: 13px;
+ 
+ }
  #bottom a:hover{ 
  color:#2f405f;
  }
