--- a/css/normalize.css
+++ b/css/normalize.css
@@ -254,9 +254,11 @@ color:#f3ce5e;
 	border-style:solid;
 	border-color:#98bf21;
 	background-color:#3ae85b;
-	
-	
- }
+	text-transform:lowercase;
+}
+ p:first-letter 
+    text-transform: capitalize;
+}
   article {
     background: #fff;
     margin-top: 6px;
