--- a/css/normalize.css
+++ b/css/normalize.css
@@ -252,8 +252,8 @@ color:#f3ce5e;
  float:left;
 	display:inline;
 	border-style:solid;
-	border-color:#98bf21;
-	background-color:#3ae85b;
+	border-color:
+	background-color:
 	
 }
  
