--- a/css/normalize.css
+++ b/css/normalize.css
@@ -324,7 +324,7 @@ color:#f3ce5e;
   font-size:15px;
   }
   #topnav a:hover{
-  background-color:#9febfb;
+  background-color:#093f17;
   }
   footer{
   background-color:#fff;
